prepare constructor + fix horizontal scroll

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -1,7 +1,7 @@
 .header {
    display: flex;
    justify-content: center;
-   width: 100vw;
+   /* width: 100vw; */
    background-color: #1c1c21;
 }
 
