--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -10,9 +10,9 @@
 .article {
    display: flex;
    flex-wrap: wrap;
-
-   max-height: 70vh;
-   overflow-y: auto;
+   /* min-height: 40vh;*/
+    max-height: 70vh;
+   overflow-y: scroll;
    overflow-x: hidden;
    scroll-behavior: smooth;
 }
