--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,12 @@
 
 body {
    font-family: "JetBrainsMono", "Tahoma";
-   display: flex;
-   justify-content:center;
-   flex-wrap: wrap;
+   /* display: flex; */
+   /* justify-content: center; */
+   /* flex-wrap: wrap; */
    /* max-width: 1280px; */
-   margin: 0 auto;
+   /* margin: 0 auto; */
+   /* overflow-x: hidden; */
 
 
    background-color: #131316;
